[package]
name = "brainfuckm"
version = "0.1.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/brainfuck"
license = "MIT"
description = "library to parse brainfuck source code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poetic = "0.1"
